custom-elements: Handle V0 type extension as close to element creation as possible.

Move V0 type extension handling in Element::
AttributeChangedFromParserOrByCloning() to its callsites close to
element creation.

* HTMLConstructionSite:
  Move 'is' attribute lookup from LookUpCustomElementDefinition() to
  CreateElement() in order to avoid looking up 'is' again.

* XMLDocumentParser:
  Convert libxml attributes to blink::Attribute before element creation
  to find 'is' attribute easily.

This CL has no behavior changes, and is a preparation to consolidate
V0 type extension handling and element creation.

Bug: 808302, 808311, 807871
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ibb4254720f1bed8b92e878fa7b29c986bfa1f87d
Reviewed-on: https://chromium-review.googlesource.com/898685
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534035}
Former-commit-id: da0d0c5000a2bb40462601ef8cde0c40f7932fe5